--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/sweetalert2/dist/sweetalert2.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/index.js"
+            ]
           },
           "configurations": {
             "production": {
